# django-auth-dingding

./: .gitignore  LICENSE  README.md  pyproject.toml
src/django_auth_dingding/: apps.py  auth.py  urls.py  utils.py  views.py
