[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django_auth_dingding"
version = "0.0.3"
authors = [
  { name="quanbisen", email="1769128867@qq.com" },
]
description = "A simple Dingding auth Django app."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/quanbisen/django-dingding-auth"
"Bug Tracker" = "https://github.com/quanbisen/django-dingding-auth/issues"